WEB-5838 fix search bar to top on mobile

--- a/src/styles/_search.scss
+++ b/src/styles/_search.scss
@@ -59,6 +59,11 @@
         }
     }
     @include size-only-mobile {
+        &[data-state='active'] {
+            @include position(fixed, 0 0 null 0);
+            height: $sizing-4XL;
+            width: 100%;
+        }
         [class*='vdp-search-field__icon'] {
             line-height: $sizing-4XL;
         }
